# RollScript

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: feature_request.md
App/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Core/Plugins/: IPlugin.h  PluginManager.cpp  PluginManager.h
Core/Translation/: TranslationManager.cpp  TranslationManager.h
ISSUE_TEMPLATE/: bug_report.md
Resources/: .Icons aus Lucide.txt.kate-swp  Icons aus Lucide.txt  RollScript.qrc
Translations/: RollScript_de_DE.ts  RollScript_en_US.ts
